2005-08-12 16:06 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringArea) compute total area of the ring.
	* src/ring.c (ringSurroundsTriangle) accept triangle if area is the
	same sign as ring total area.

2005-08-12 12:55 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsTriangle) added to test if a triangle
	is acceptable to add in order to eventually complete ring.

2005-08-12 12:40 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringIntersectsSegment) handels parallel segments
	correctly.

2005-08-12 10:42 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringIntersectsSegment) renamed from ringSurroundsSegment.

2005-08-12 10:10 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsSegment) also tests intersections.

2005-08-12  8:48 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSurroundsSegment) tests existing segments for being
	topologically correct by node id.

2005-08-11 14:06 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) store original segments when first
	triangle is added.
	* src/ring.c (ringTecplot) dump original segments.

2005-08-11 10:27 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringTecplot) dump segments, triangles, node ids.

2005-08-10 16:52 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringTecplot) dump triangles to tecplot in uv.

2005-08-10 16:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) reuse nodes if
	bary is near 0 or 1.
	* src/gridinsert.c (gridReconstructSplitEdgeRatio) edges are not
	implemented.

2005-08-10  9:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) moved above
	gridFillRingWithExisitingCellFaces to get interface. now splits edge
	and keeps going.
	* src/gridcad.c (gridLineSegmentIntersectsFace) return grid only if 
	radius < 1.0e-6 and 0<bary<1

2005-08-10  9:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFillRingWithCellEdgeSplits) cleaned up to
	examine ring equators.
