@@ -1,3 +1,8 @@
+2005-08-13 13:58 Mike Park  <mike.park@nasa.gov>
+
+	* src/ring.c (ringSurroundsTriangle) reject triangle that pierces
+	ring.
+
 2005-08-12 16:06 Mike Park  <mike.park@nasa.gov>
 
 	* src/ring.c (ringArea) compute total area of the ring.
